--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Twitch Random TV</title>
+  <title>Roleta 3RL Twitch Random TV</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
